# puddle-farm

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  Rocket.toml  api.yaml  docker-compose.yml  nginx.conf.example  start.sh
.github/workflows/: frontend.yml
docker_scripts/: startx.sh
frontend/: .babelrc  .env.development  biome.json  index.html  package-lock.json  package.json  tsconfig.json  vite-env.d.ts  vite.config.js
frontend/public/: index.html  manifest.json
frontend/src/: About.js  About.tsx  App.css  App.js  App.tsx  Distribution.tsx  History.js  Interfaces.tsx  Matchup.js  Matchup.tsx  NavBar.js  NavBar.tsx  Player.js  Player.tsx  Popularity.js  Popularity.tsx  Search.js  Search.tsx  Settings.js  Settings.tsx  Stats.js  Stats.tsx  Storage.js  Storage.tsx  Tag.js  ThemeManager.js  ThemeManager.tsx  Themes.js  Themes.tsx  Top100.js  TopGlobal.js  TopGlobal.tsx  TopPlayer.js  TopPlayer.tsx  Utils.js  Utils.jsx  index.tsx
frontend/src/components/: HistoryRow.tsx  NavBar.tsx  (+4 more)
migrations/2024-08-28-045430_create_initial/: down.sql  up.sql
migrations/2024-09-02-151403_top/: down.sql  up.sql
migrations/2024-10-06-143030_add_odds/: down.sql  up.sql
migrations/2024-11-02-015948_add_players_status/: down.sql  up.sql
migrations/2024-11-14-082614_add_games_real_timestamp/: down.sql  up.sql
migrations/2024-11-21-050451_add_tags/: up.sql
migrations/2025-08-24-193615_create_initial/: down.sql  up.sql
migrations/2026-05-20-000000_drop_rank_tables/: down.sql  up.sql
scripts/: start.sh  startx.sh
src/: db.rs  ggst_api.rs  imdb.rs  main.rs  migrate.rs  models.rs  pull.rs  rating.rs  requests.rs  responses.rs  schema.rs
src/handlers/: avatar.rs  common.rs  mod.rs  player.rs  player_history.rs  rating_sync.rs  search.rs  top.rs
systemd/: pf-pull.service  pf-web.service  pf-x.service
(+43 files in other folders)
