[package]
name = "puddle-farm"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = {version = "0.7.9", features = ["macros"] }
tower-http = { version = "0.6.2", features = ["cors"] }
bb8 = "0.8"
bb8-postgres = "0.8.1"
bb8-redis = "0.17.0"
diesel = { version = "2.2.6", features = ["postgres", "chrono"] }
diesel-async = { version = "0.5.2", features = ["postgres", "bb8"] }
dotenv = "0.15.0"
tokio = { version = "1.42.0", features = ["time", "rt-multi-thread"] }
lazy_static = "1.5.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2.3"
steamworks = { git = "https://github.com/Noxime/steamworks-rs.git"}
serde = { version = "1", features = ["derive"] }
serde_derive = "1"
aes-gcm = "0.10"
rmp-serde = "1"
reqwest = "0.11"
hex = "0.4"
base64-url = "1.4"
chrono = "0.4"
rstat = "0.6.0"
rand = "0.8.5"
uuid = {version = "1.11.0", features = ["v4", "fast-rng"]}
serde_json = "1.0.133"
